Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,7 @@ html {
 
 .stop-scrolling {
   height: 100%;
+  width: 100%;
   overflow: hidden;
 }
 
